--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "styled-components": "^5.3.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "npm run clear && react-scripts build",
     "test": "react-scripts test",
@@ -24,9 +26,7 @@
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js",
     "format:lint": "npm run format && npm run lint",
-    "clear": "rimraf build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "clear": "rimraf build"
   },
   "eslintConfig": {
     "extends": "react-app"
